--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Passion-P</title>
 		<link rel="stylesheet" href="/css/main.css" />
+		<script src="https://kit.fontawesome.com/8acb101a1a.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<!-- \\\         N A V I G A T I O N         /// -->
@@ -14,5 +15,8 @@
 				<div class="burger-btn__bars"></div>
 			</div>
 		</button>
+		<header class="header">
+			<div class="header__arrow"><i class="fa-solid fa-angles-down"></i></div>
+		</header>
 	</body>
 </html>
