--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Passion-P</title>
 		<link rel="stylesheet" href="/css/main.css" />
-		<script src="https://kit.fontawesome.com/8acb101a1a.js" crossorigin="anonymous"></script>
+		<script
+			src="https://kit.fontawesome.com/8acb101a1a.js"
+			crossorigin="anonymous"
+		></script>
 	</head>
 	<body>
 		<!-- \\\         N A V I G A T I O N         /// -->
@@ -16,7 +19,11 @@
 			</div>
 		</button>
 		<header class="header">
-			<div class="header__arrow"><i class="fa-solid fa-angles-down"></i></div>
+			<a href="#" class="header__link">
+				<div class="header__link__arrow">
+					<i class="fa-solid fa-angles-down bounce-top"></i>
+				</div>
+			</a>
 		</header>
 	</body>
 </html>
