--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 				<div class="burger-btn__bars"></div>
 			</div>
 		</button>
+
+		<!-- \\\         H E A D E R         /// -->
 		<header class="header">
 			<a href="#" class="header__link">
 				<div class="header__link__arrow">
@@ -25,5 +27,26 @@
 				</div>
 			</a>
 		</header>
+
+		<!-- \\\         S O C I A L         /// -->
+		<div class="social">
+			<a href="#" class="social__instagram">
+				<i class="fa-brands fa-instagram-square"></i>
+			</a>
+			<a href="#" class="social__facebook">
+				<i class="fa-brands fa-facebook-square"></i>
+			</a>
+		</div>
+
+		<!-- \\\         C A R U S E L L        /// -->
+		<div class="slider">
+			<div class="slider__carousel">
+				<span style="--i:1;" class="slider__carousel__span"><img class="slider__carousel__span__img" src="/img/img1.jpg" alt="" /></span>
+				<span style="--i:2;" class="slider__carousel__span"><img class="slider__carousel__span__img" src="/img/img2.jpg" alt="" /></span>
+				<span style="--i:3;" class="slider__carousel__span"><img class="slider__carousel__span__img" src="/img/img3.jpg" alt="" /></span>
+				<span style="--i:4;" class="slider__carousel__span"><img class="slider__carousel__span__img" src="/img/img4.jpg" alt="" /></span>
+				<span style="--i:5;" class="slider__carousel__span"><img class="slider__carousel__span__img" src="/img/img5.jpg" alt="" /></span>
+			</div>
+		</div>
 	</body>
 </html>
