added some animations

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Passion-P</title>
 		<link rel="stylesheet" href="/css/main.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
 		<script
 			src="https://kit.fontawesome.com/8acb101a1a.js"
 			crossorigin="anonymous"
@@ -21,6 +27,7 @@
 
 		<!-- \\\         H E A D E R         /// -->
 		<header class="header">
+			<h1 class="header__h1 tracking-in-contract-bck">Fotografia z pasją!</h1>
 			<a href="#" class="header__link">
 				<div class="header__link__arrow">
 					<i class="fa-solid fa-angles-down bounce-top"></i>
@@ -40,12 +47,28 @@
 
 		<!-- \\\         C A R U S E L L        /// -->
 		<div class="slider">
+			<h1 class="slider__h1 text-focus-in ">Nasza oferta</h1>
 			<div class="slider__carousel">
-				<span style="--i:1;" class="slider__carousel__span"><img class="slider__carousel__span__img" src="/img/img1.jpg" alt="" /></span>
-				<span style="--i:2;" class="slider__carousel__span"><img class="slider__carousel__span__img" src="/img/img2.jpg" alt="" /></span>
-				<span style="--i:3;" class="slider__carousel__span"><img class="slider__carousel__span__img" src="/img/img3.jpg" alt="" /></span>
-				<span style="--i:4;" class="slider__carousel__span"><img class="slider__carousel__span__img" src="/img/img4.jpg" alt="" /></span>
-				<span style="--i:5;" class="slider__carousel__span"><img class="slider__carousel__span__img" src="/img/img5.jpg" alt="" /></span>
+				<span style="--i: 1" class="slider__carousel__span"
+					><p class="slider__carousel__span__description">Lorem, ipsum.</p>
+					<img class="slider__carousel__span__img" src="/img/img1.jpg" alt=""
+				/></span>
+				<span style="--i: 2" class="slider__carousel__span"
+					><p class="slider__carousel__span__description">Lorem, ipsum.</p>
+					<img class="slider__carousel__span__img" src="/img/img2.jpg" alt=""
+				/></span>
+				<span style="--i: 3" class="slider__carousel__span"
+					><p class="slider__carousel__span__description">Lorem, ipsum.</p>
+					<img class="slider__carousel__span__img" src="/img/img3.jpg" alt=""
+				/></span>
+				<span style="--i: 4" class="slider__carousel__span"
+					><p class="slider__carousel__span__description">Lorem, ipsum.</p>
+					<img class="slider__carousel__span__img" src="/img/img4.jpg" alt=""
+				/></span>
+				<span style="--i: 5" class="slider__carousel__span"
+					><p class="slider__carousel__span__description">Lorem, ipsum.</p>
+					<img class="slider__carousel__span__img" src="/img/img5.jpg" alt=""
+				/></span>
 			</div>
 		</div>
 	</body>
