--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 		</div>
 
 		<!-- \\\         C A R U S E L L        /// -->
-		<div class="slider">
-			<h1 class="slider__h1 text-focus-in ">Nasza oferta</h1>
+		<section class="slider">
+			<h1 class="slider__h1 text-focus-in">Nasza oferta</h1>
 			<div class="slider__carousel">
 				<span style="--i: 1" class="slider__carousel__span"
 					><p class="slider__carousel__span__description">Lorem, ipsum.</p>
@@ -70,6 +70,13 @@
 					<img class="slider__carousel__span__img" src="/img/img5.jpg" alt=""
 				/></span>
 			</div>
-		</div>
+		</section>
+		<section class="prices">
+			<h2 class="prices__h2">Wycena</h2>
+			<p class="prices__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus fuga odit at sapiente alias porro ab quae modi dolore perspiciatis aperiam nostrum illo eos, aut ipsam. Animi asperiores impedit accusantium. Dolorum quae magnam voluptas saepe quisquam? Alias ad tempore iure adipisci dolore modi quas labore? Amet provident nostrum nobis ducimus.</p>
+			<p class="prices__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, maxime neque. Repellendus, sed voluptatibus eius soluta cum aliquid ipsam, blanditiis amet enim beatae asperiores assumenda ea totam nostrum distinctio nulla modi quasi inventore quisquam? Maiores, quidem odio voluptatem eum quae laudantium quibusdam, doloremque deleniti asperiores tempora, ex facilis mollitia ratione.</p>
+			<p class="prices__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, maxime neque. Repellendus, sed voluptatibus eius soluta cum aliquid ipsam, blanditiis amet enim beatae asperiores assumenda ea totam nostrum distinctio nulla modi quasi inventore quisquam? Maiores, quidem odio voluptatem eum quae laudantium quibusdam, doloremque deleniti asperiores tempora, ex facilis mollitia ratione.</p>
+
+		</section>
 	</body>
 </html>
