--- a/index.html
+++ b/index.html
@@ -73,10 +73,36 @@
 		</section>
 		<section class="prices">
 			<h2 class="prices__h2">Wycena</h2>
-			<p class="prices__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus fuga odit at sapiente alias porro ab quae modi dolore perspiciatis aperiam nostrum illo eos, aut ipsam. Animi asperiores impedit accusantium. Dolorum quae magnam voluptas saepe quisquam? Alias ad tempore iure adipisci dolore modi quas labore? Amet provident nostrum nobis ducimus.</p>
-			<p class="prices__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, maxime neque. Repellendus, sed voluptatibus eius soluta cum aliquid ipsam, blanditiis amet enim beatae asperiores assumenda ea totam nostrum distinctio nulla modi quasi inventore quisquam? Maiores, quidem odio voluptatem eum quae laudantium quibusdam, doloremque deleniti asperiores tempora, ex facilis mollitia ratione.</p>
-			<p class="prices__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, maxime neque. Repellendus, sed voluptatibus eius soluta cum aliquid ipsam, blanditiis amet enim beatae asperiores assumenda ea totam nostrum distinctio nulla modi quasi inventore quisquam? Maiores, quidem odio voluptatem eum quae laudantium quibusdam, doloremque deleniti asperiores tempora, ex facilis mollitia ratione.</p>
-
+			<p class="prices__p">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus fuga odit
+				at sapiente alias porro ab quae modi dolore perspiciatis aperiam nostrum
+				illo eos, aut ipsam. Animi asperiores impedit accusantium. Dolorum quae
+				magnam voluptas saepe quisquam? Alias ad tempore iure adipisci dolore
+				modi quas labore? Amet provident nostrum nobis ducimus.
+			</p>
+			<p class="prices__p">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, maxime
+				neque. Repellendus, sed voluptatibus eius soluta cum aliquid ipsam,
+				blanditiis amet enim beatae asperiores assumenda ea totam nostrum
+				distinctio nulla modi quasi inventore quisquam? Maiores, quidem odio
+				voluptatem eum quae laudantium quibusdam, doloremque deleniti asperiores
+				tempora, ex facilis mollitia ratione.
+			</p>
+			<p class="prices__p">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, maxime
+				neque. Repellendus, sed voluptatibus eius soluta cum aliquid ipsam,
+				blanditiis amet enim beatae asperiores assumenda ea totam nostrum
+				distinctio nulla modi quasi inventore quisquam? Maiores, quidem odio
+				voluptatem eum quae laudantium quibusdam, doloremque deleniti asperiores
+				tempora, ex facilis mollitia ratione.
+			</p>
 		</section>
+		<footer><div class="wrapper">
+			<div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2443.8004439516453!2d21.001075951840704!3d52.228843265417936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ecc8d65233559%3A0xeb0bc9f267c74ed9!2sWarszawa%20Centralna!5e0!3m2!1spl!2spl!4v1653983247548!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+			<div class="contact">
+				<p class="contact__p"><strong>Tel: </strong>876-543-2101</p>
+				<p class="contact__p"><strong>E-mail: </strong>expample@mail.mail</p>
+			</div></div>
+		</footer>
 	</body>
 </html>
